[package]
name = "image-to-ascii-api"
version = "0.4.0"
authors = ["kpberry", "leomosley"]
edition = "2021"
description = "Api to convert images and gifs to ascii art"
license = "MIT"
homepage = "https://github.com/leomosley/image-to-ascii-api"
exclude = ["gallery", ".github"]

[[bin]]
path = "src/main.rs"
name = "image-to-ascii-api"

[dependencies]
image = "0.24.2"
bdf = "0.6.0"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
rand = "0.8.5"
serde_json = "1.0.81"
indicatif = "0.16.2"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["blocking"] }
rocket = "0.5.0"
tokio = { version = "1", features = ["full"] }